2006-12-11  Wim Taymans  <wim@fluendo.com>

	Patch by: Tahseen Mohammad <tahseen dot mohammad at gmail dot com>

	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux.....OggStream.OggChain.pushPage):
	Ignore annodex streams when discovering streams.

2006-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/player/Cortado.java: (Cortado...paint):
	  Log when appletDimension is wrong.
	  height == statusHeight should be acceptable.

2006-11-17  Michael Smith  <msmith@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkJ2.java: (AudioSinkJ2.open):
	  Attempt to use Real Alsa Devices instead of the software mixer,
	  which doesn't provide good sync, if possible.

2006-11-16  Michael Smith  <msmith@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado...init):
	  Use seekable parameter instead of live to determine seekability.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado...actionPerformed),
	(Cortado...realRun), (Cortado...mouseDragged),
	(Cortado...mouseMoved), (Cortado...handleMessage),
	(Cortado...newState), (Cortado...newSeek), (Cortado...start):
	Handle resize correctly.

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc),
	(VideoSink.render), (VideoSink), (VideoSink.getFactoryName),
	(VideoSink.setProperty):
	Fix keep-aspect. Added scale property.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Message.java: (Message), (Message.toString),
	(Message.newEOS), (Message.newError), (Message.newWarning),
	(Message.newStateDirty):
	Add duration message.

	* README:
	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado...getAppletInfo), (Cortado...getRevision),
	(Cortado...getParameterInfo), (Cortado...init),
	(Cortado...handleMessage):
	Make live and seekable enums so that they can be configured
	automatically on request.
	When we get a duration message, make the stream seekable and
	non-live in auto mode.
